RESOLVED FIXED225210
[macCatalyst] "Enter Full Screen" button in media controls disappears
https://bugs.webkit.org/show_bug.cgi?id=225210
Summary [macCatalyst] "Enter Full Screen" button in media controls disappears
Devin Rousso
Reported 2021-04-29 14:40:35 PDT
.
Attachments
Patch (14.13 KB, patch)
2021-04-29 15:32 PDT, Devin Rousso
eric.carlson: review+
Patch (14.25 KB, patch)
2021-05-03 12:15 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-04-29 14:40:46 PDT
Devin Rousso
Comment 2 2021-04-29 15:32:07 PDT
Eric Carlson
Comment 3 2021-05-03 12:08:19 PDT
Comment on attachment 427378 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427378&action=review > Source/WebCore/ChangeLog:10 > + must `webkitSupportsFullscreen`, which calls into `MediaPlayerPrivate::supportsFullscreen`. ? s/must/must call/
Devin Rousso
Comment 4 2021-05-03 12:10:31 PDT
Comment on attachment 427378 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427378&action=review >> Source/WebCore/ChangeLog:10 >> + must `webkitSupportsFullscreen`, which calls into `MediaPlayerPrivate::supportsFullscreen`. > > ? s/must/must call/ Heh I was trying to use `webkitSupportsFullscreen` as a verb 😅 I'll rephrase it so it's more clear.
Devin Rousso
Comment 5 2021-05-03 12:15:36 PDT
EWS
Comment 6 2021-05-03 12:58:53 PDT
Committed r276918 (237260@main): <https://commits.webkit.org/237260@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427585 [details].
Note You need to log in before you can comment on or make changes to this bug.